# nseindiapy

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  quickstart.md
docs/api/: archives.md  corporate.md  derivatives.md  equity.md  indices.md  ipo.md  market.md  reports.md
nseindiapy/: __init__.py  _df.py  _session.py  archives.py  client.py  corporate.py  derivatives.py  equity.py  indices.py  ipo.py  market.py  reports.py
tests/: test_live.py
