[project]
name = "nseindiapy"
version = "0.1.0"
description = "Python client for NSE India — National Stock Exchange of India. Clean, typed access to equity quotes, indices, derivatives, corporate actions, market data, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Kamal Joshi" }]
dependencies = [
    "brotli>=1.2.0",
    "httpx[brotli]>=0.27",
]

[project.optional-dependencies]
polars = ["polars>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nseindiapy"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
